# fractals

./: .gitignore  AllGrid  AllPointsBuilder.cpp  CMakeLists.txt  MandelMind.ipynb  README.md  Untitled.ipynb  compile_commands.json  m_set.csv  main.cpp  mandelbrot.c  mandelbrot.ipynb  mandelbrot_parallel.c  mandelbrot_parallel.ipynb  mandelbrot_parallel.py  mandelbrot_parallel_class.py
ML/: AllPointsBuilder.cpp  DNN-Learner.ipynb  Learner.ipynb  Learner.py
exported/: qcustomplot.cmake
include/: fractals.hpp
src/: mandelbrot.cpp
